tests/samples/negative/generics/associated_method_explicit_missing.ax
module associated_method_explicit_missing;

struct Box {
    value: i32;
}

fn main() -> i32 {
    return Box.missing<i32>();
}
